Add the difficulty into parameters, and complete readme
